src/styles/LiveAnywhere.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap");

.title {
  padding-left: 90px;
  font-family: "Poppins", sans-serif;
}
.card-section {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 0 70px 0 70px;

}

.cards {
  border-radius: 10px !important;
  height: 310px !important;
  width: 310px !important;
}

.card-imgs {
  border-radius: 10px !important;
}

.card-text {
  padding-left: 0 !important;
}

